<resources>
    <string name="app_name" translatable="false">IMDB 2.0</string>
    <string name="movie_poster" translatable="false">MoviePoster</string>
    <string name="edit_icon" translatable="false">EditIcon</string>
    <string name="favorites_icon" translatable="false">FavoritesIcon</string>
    <string name="add_movie_fab" translatable="false">AddMovieFab</string>
    <string name="tap_to_select_poster" translatable="false">Tap to select poster</string>
    <string name="save_movie" translatable="false">Save Movie</string>
    <string name="add_movie" translatable="false">Add Movie</string>
    <string name="movie_title" translatable="false">Movie Title</string>
    <string name="review" translatable="false">Review</string>
    <string name="description" translatable="false">Description</string>
    <string name="your_rating" translatable="false">Your Rating:</string>
    <string name="edit_movie" translatable="false">Edit Movie</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="delete_movie" translatable="false">Delete Movie</string>
    <string name="are_you_sure_you_want_to_delete_this_movie" translatable="false">Are you sure you want to delete this movie?</string>
    <string name="dialog_confirm" translatable="false">Are you sure you want to delete \'%1$s\'?</string>
    <string name="movie_added" translatable="false">Movie Added!</string>
    <string name="movie_edited" translatable="false">Movie Edited!</string>
    <string name="added_to_favorites" translatable="false">"Added to Favorites"</string>
    <string name="removed_from_favorites" translatable="false">"Removed from Favorites"</string>
    <string name="home" translatable="false">Home</string>
    <string name="favorites" translatable="false">Favorites</string>
    <string name="no_favorites_yet" translatable="false">No favorites yet</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="user" translatable="false">User</string>
    <string name="reviewed" translatable="false">Reviewed</string>
    <string name="average_rating" translatable="false">Average Rating</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="edit_username" translatable="false">Edit Username</string>
    <string name="enter_name" translatable="false">Enter name</string>
    <string name="save" translatable="false">Save</string>
    <string name="my_review" translatable="false">My Review</string>
    <string name="back_arrow" translatable="false">Back Arrow</string>
    <string name="english" translatable="false">English</string>
    <string name="Hebrew" translatable="false">עברית</string>
    <string name="app_language">App Language</string>
    <string name="movie_deleted">Movie deleted successfully</string>
    <string name="title_required">Title is required</string>
    <string name="empty_home_message">No movies yet.\nTap the + button to add one.</string>
    <string name="discover_movies">Discover Movies</string>
    <string name="actor_name">Actor Name</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="popular_actors">Popular Actors</string>
    <string name="search_movies">Search movies…</string>
    <string name="location_denied">Permission denied. Cannot find cinemas.</string>
    <string name="fetching_gps">Fetching GPS</string>
    <string name="no_internet">No internet connection</string>
    <string name="find_cinemas_near_me">Find cinemas near me</string>
    <string name="nearby_cinemas">Nearby Cinemas</string>
    <string name="distance">Distance</string>
    <string name="address">Address</string>
    <string name="theater_name">Theater Name</string>


</resources>
