<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_dark"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/imdb_gold"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_language"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:background="@drawable/bg_button"
        app:backgroundTint="@null"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_hebrew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/Hebrew"
        android:background="@drawable/bg_button"
        app:backgroundTint="@null"/>

</LinearLayout>